# eigen3-realloc-nonmalloced-free

./: CMakeLists.txt  README.md  buildRun.sh  main.cpp
lib/: CMakeLists.txt  lib.cpp  lib.h
